datasets/dataset_txt/mitmproxy/mitmproxy_1800.txt
geokat commented on 5 Jan 2013
The following line causes a syntax error for pythons older than 2.7:
https://github.com/cortesi/mitmproxy/blob/master/libmproxy/authentication.py#L104
Traceback (most recent call last):
  File "./mitmproxy", line 19, in <module>
    from libmproxy import proxy, console, cmdline, version
  File "/home/geo/0/mitmproxy/libmproxy/proxy.py", line 21, in <module>
    import authentication
  File "/home/geo/0/mitmproxy/libmproxy/authentication.py", line 104
    self.usernames = {username:token for username,token in valid_entries}
                                       ^
SyntaxError: invalid syntax